--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/03/11</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>drowned after jumping off Greek-bound ship near Souda (GR); 3 bodies found, 15 missing</b><br>Source: KI/MNS<br>
+Found dead: <b>24/09/07</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (1 child; 1 man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, bodies recovered from the sea near Samos (GR) after wooden boat capsized</b><br>Source: KI/NOB<br>
 
 <br>
 
