--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/01/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>drowned after reportedly colliding with border guard patrol ship near Tarifa (ES)</b><br>Source: GARA<br>
+Found dead: <b>02/06/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Zhou Zhe Gun (man, 43)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>suicide, strangled himself in Volkstedt detention centre (DE) after asylum application was rejected</b><br>Source: ProAsyl/OL/CARF/ZAG<br>
 
 <br>
 
