--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/02/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat sank near Zarzis (TN) on way to Italy; 1 body found, 1 missing, 10 survivors</b><br>Source: LESP<br>
+Found dead: <b>11/07/17</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned off coast of Al Hoceima (MA); 48 survivors</b><br>Source: Caminando/Ell Diario/IOM<br>
 
 <br>
 
