--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/08/09</b><br>Number of person: <b>27</b><br>Name, gender, age: <b>N.N. (1 man)</b><br>Region of origin: <b>Sub-Saharan Africa, Morocco</b><br>Cause of death: <b>7 drowned in shipwreck near Trafalgar beach (ES); 20 missing; 10 survived</b><br>Source: LatinAHTribune<br>
+Found dead: <b>03/12/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Joseph (boy, 16)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>hit by truck on A16 highway in Calais (FR) while trying to reach Great Britain</b><br>Source: Libération/AFP/VoixDuNord<br>
 
 <br>
 
