--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/11/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Harrinder Singh Cheena (boy, 16)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>suicide, hanged himself in youth prison in Halle (DE) out of fear of deportation</b><br>Source: SZ/MNS/ARI/ZAG<br>
+Found dead: <b>27/08/15</b><br>Number of person: <b>71</b><br>Name, gender, age: <b>N.N. (4 children; 8 women; 59 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>suffocated in back of truck found outside Parndorf (AT); abandoned by traffickers</b><br>Source: DerStandard/GuardianUn.<br>
 
 <br>
 
