--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/96</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iraq, Algeria</b><br>Cause of death: <b>died in minefield while trying to cross Turkish-Greek border</b><br>Source: Diário de Notícias/BRC<br>
+Found dead: <b>03/03/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found at Camposoto beach in San Fernando, Cádiz (ES)</b><br>Source: APDHA/IOM/VozCádiz<br>
 
 <br>
 
