--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/03/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found at Camposoto beach in San Fernando, Cádiz (ES)</b><br>Source: APDHA/IOM/VozCádiz<br>
+Found dead: <b>23/08/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (31)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>reportedly drowned, found dead on coast of the Spanish enclave of Melilla (ES)</b><br>Source: MNS<br>
 
 <br>
 
