--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/02/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Bat Bold</b><br>Region of origin: <b>Mongolia</b><br>Cause of death: <b>died in Löwenströmska Hospital (SE) after falling ill in detention centre and not receiving appropriate healthcare</b><br>Source: FARR<br>
+Found dead: <b>07/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>died during rescue attempt by Italian authorities in Syracuse (IT)</b><br>Source: ANA/ART<br>
 
 <br>
 
