--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/04/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, found on Jabonera beach in Tarifa, Cádiz (ES)</b><br>Source: Diario de Cádiz/IOM/EPress/EFE<br>
+Found dead: <b>22/12/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ismael (man)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>found dead at bottom of bridge in centre of Calais (FR),  unknown</b><br>Source: INDgb/CMS<br>
 
 <br>
 
