--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/10/94</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 babies)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>found dead after shipwreck near Cesine-Otranto (IT)</b><br>Source: TL<br>
+Found dead: <b>31/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, 23)</b><br>Region of origin: <b>Bulgaria</b><br>Cause of death: <b>froze to death in the Belles mountains on Greek-Bulgarian border while trying to reach Greece</b><br>Source: MNS<br>
 
 <br>
 
