--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>13/04/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Cinie (woman, 28)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>drowned after jumping off Libyan boat that had shipwrecked near Pantelleria (IT)</b><br>Source: LR/FE/DerStandard/MAS/Mail Online<br>
+Found dead: <b>15/01/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Papie Mukuna</b><br>Region of origin: <b>Zaire</b><br>Cause of death: <b>suicide, at asylum centre in Den Helder (NL) out of fear of deportation</b><br>Source: PRIME<br>
 
 <br>
 
