--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>suicide, in detention centre in Rotterdam (NL) out of fear of deportation</b><br>Source: MNS/VK<br>
+Found dead: <b>Jul 07</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N. (1 child; 11 adults)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>1 drowned, dinghy collided with fishing boat on way from Libya to Italy; 11 missing</b><br>Source: LR<br>
 
 <br>
 
