--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/93</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (28; 35)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>hit by train in Balerna (CH) Swiss Alps while walking on tracks to Switzerland</b><br>Source: TA/NZZ<br>
+Found dead: <b>04/06/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Joseph (28)</b><br>Region of origin: <b>Congo</b><br>Cause of death: <b>drowned trying to swim to the Spanish enclave of Ceuta (ES)</b><br>Source: EP<br>
 
 <br>
 
