--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/08/14</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>died, probably from dehydration and starvation, on dinghy in the Mediterranean Sea; 73 survived</b><br>Source: DW/UNHCR<br>
+Found dead: <b>29/08/00</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (3 children; 4 men)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>drowned in the Sava River on Bosnian-Hungarian border while trying to enter Europe</b><br>Source: MNS/AFP/taz/IFIR<br>
 
 <br>
 
