--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Nov 07</b><br>Number of person: <b>57</b><br>Name, gender, age: <b>N.N. (57 men)</b><br>Region of origin: <b>Egypt</b><br>Cause of death: <b>drowned in shipwreck while travelling from Alexandria (EG) to Italy</b><br>Source: LAT<br>
+Found dead: <b>20/10/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 16)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>killed in France trying to cross highway full of trucks heading to Great Britain</b><br>Source: CMS/EastAFRO<br>
 
 <br>
 
