--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>20/10/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, 16)</b><br>Region of origin: <b>Ethiopia</b><br>Cause of death: <b>killed in France trying to cross highway full of trucks heading to Great Britain</b><br>Source: CMS/EastAFRO<br>
+Found dead: <b>17/09/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fadwa Taha Ali (woman, 50)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot in the Mediterranean Sea when boat carrying 200 refugees was attacked by Egyptian navy</b><br>Source: AI/LR<br>
 
 <br>
 
