--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>04/07/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samir Khedija (newborn)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>died after mother fell from truck near Calais (FR), triggering premature delivery at 22 weeks</b><br>Source: GuardianUn./IBT<br>
+Found dead: <b>15/07/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Chandima Endirisinghe</b><br>Region of origin: <b>Sri Lanka</b><br>Cause of death: <b>suffocated in sealed trailer in Györ (HU)</b><br>Source: Reu./AP/Budapestsun/ZAG<br>
 
 <br>
 
