--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/08/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, ±25)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>drowned, found on Los Carabos beach in the Spanish enclave of Melilla (ES)</b><br>Source: MNS<br>
+Found dead: <b>30/08/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Andrej Donorov (man, 34)</b><br>Region of origin: <b>Ukraine</b><br>Cause of death: <b>suicide,11 days after deportation from the Netherlands to Spain,asylum seeker with schizophrenia and no medical help</b><br>Source: VK/NRC/Oz/Zelf<br>
 
 <br>
 
