--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/09/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 19)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>stowaway, fell into field in Vivantes (FR) from wheel bay of airplane from North Africa</b><br>Source: MNS<br>
+Found dead: <b>Sep 02</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing, abandoned near Greek coast in boat that later capsized</b><br>Source: IRR/MUGAK<br>
 
 <br>
 
