--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/08/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moustapha Anaki (man, 31)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>died of unknown causes in detention centre near Crotone (IT); ensuing protests caused centre to close</b><br>Source: LR<br>
+Found dead: <b>03/11/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Mali</b><br>Cause of death: <b>crushed while trying to protect her 2 children on boat sinking in the Strait of Sicily</b><br>Source: TheHuff/ANSA<br>
 
 <br>
 
