--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/04/15</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned after boat capsized off coast of Symi (GR)</b><br>Source: Greek Reporter<br>
+Found dead: <b>Feb 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rexhep Salijaj (man)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>suicide, when his permit to stay in Belgium expired, was to be deported to Kosovo away from son and family</b><br>Source: MNS<br>
 
 <br>
 
