--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/07/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed (boy, 1)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after falling overboard from overcrowded vessel while travelling to Italy</b><br>Source: IOM/UNHCR/NRC/GuardianUn./Independent/MNS<br>
+Found dead: <b>08/07/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Negmiye Beraj (baby, 10 months)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>died after being left alone on Italian shore by traffickers fleeing police</b><br>Source: MNS/IRR<br>
 
 <br>
 
